Crash in OSL getattribute call #52027

Closed
opened 2017-07-11 16:39:55 +02:00 by Ilja Razinkov · 7 comments

System Information
MacOs 10.12.5

Blender Version
Broken: 2.78 82bcfb9

Short description of error
Instant crash on getattribute call inside OSL script

Exact steps for others to reproduce the error
Open blend file from attachment and press f12. Blender crashes instantly.
OSL script is very simple - it just tryes to get location of another object in scene

shader getObjectByName(
    output float ignore=0
)
{
    point ppp = point(0,0,0);
    getattribute("TestFloor","object:location",ppp);
    printf("\npploc = %f %f %f",ppp[0],ppp[1],ppp[2]);
}

Looking into osl_services.cpp it should work, code tries to find proper object in scene... But something going wrong.

oslGetAttributeCrash.blend

**System Information** MacOs 10.12.5 **Blender Version** Broken: 2.78 82bcfb9 **Short description of error** Instant crash on getattribute call inside OSL script **Exact steps for others to reproduce the error** Open blend file from attachment and press f12. Blender crashes instantly. OSL script is very simple - it just tryes to get location of another object in scene ``` shader getObjectByName( output float ignore=0 ) { point ppp = point(0,0,0); getattribute("TestFloor","object:location",ppp); printf("\npploc = %f %f %f",ppp[0],ppp[1],ppp[2]); } ``` Looking into osl_services.cpp it should work, code tries to find proper object in scene... But something going wrong. [oslGetAttributeCrash.blend](https://archive.blender.org/developer/F658415/oslGetAttributeCrash.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @IPv6

Added subscriber: @IPv6

Added subscribers: @ThomasDinges, @mano-wii

Added subscribers: @ThomasDinges, @mano-wii

@ThomasDinges, can you take a look?

@ThomasDinges, can you take a look?

This issue was referenced by blender/cycles@71960e690f

This issue was referenced by blender/cycles@71960e690f252a637d8562915fe1e59fc1b53df0

This issue was referenced by 29ec0b1162

This issue was referenced by 29ec0b1162667124e0cd2610f087dcdb2296848d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52027
No description provided.