Fix T52027: OSL getattribute() crash, when optimizer calls it before rendering.